--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,9 @@ html {
 .qoutation:after {
   content: "”";
 }
+
+.box-shadow-custom {
+  box-shadow: 13px 11px 0px -1px rgba(0, 0, 0, 1);
+  -webkit-box-shadow: 13px 11px 0px -1px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 13px 11px 0px -1px rgba(0, 0, 0, 1);
+}
